--- a/VirtualPathCore/Views/MainView.axaml
+++ b/VirtualPathCore/Views/MainView.axaml
@@ -37,11 +37,41 @@
 		</Grid>
 
 		<!-- 底部控制面板 -->
-		<Border Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,10" Padding="20">
-			<StackPanel Orientation="Vertical" VerticalAlignment="Center">
-				<TextBlock Text="MSAA 采样数:" />
-				<Slider Width="200" Minimum="1" Maximum="16" Value="{Binding ElementName=glRenderer1, Path=Samples}" />
-			</StackPanel>
+		<Border Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,10" Padding="20" Background="#333" CornerRadius="10">
+			<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+				
+				<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="10">
+					<StackPanel Orientation="Vertical" Spacing="5" Margin="5" HorizontalAlignment="Center">
+						<TextBlock Text="MSAA 采样数:" Foreground="White" HorizontalAlignment="Center" />
+						<Slider Width="150" Minimum="1" Maximum="16" Value="{Binding ElementName=glRenderer1, Path=Samples}" HorizontalAlignment="Center" />
+					</StackPanel>
+
+					<StackPanel Orientation="Vertical" Spacing="5" Margin="5" HorizontalAlignment="Center">
+						<TextBlock Text="旋转角度:" Foreground="White" HorizontalAlignment="Center" />
+						<Slider Width="150" Minimum="0" Maximum="360" Value="{Binding RotationAngle}" HorizontalAlignment="Center" />
+					</StackPanel>
+					
+					<StackPanel Orientation="Vertical" Spacing="5" Margin="5" HorizontalAlignment="Center">
+						<TextBlock Text="缩放比例:" Foreground="White" HorizontalAlignment="Center" />
+						<Slider Width="150" Minimum="0.1" Maximum="3.0" Value="{Binding Scale}" HorizontalAlignment="Center" />
+					</StackPanel>
+					
+					<StackPanel Orientation="Vertical" Spacing="5" Margin="5" HorizontalAlignment="Center">
+						<TextBlock Text="位置 X:" Foreground="White" HorizontalAlignment="Center" />
+						<Slider Width="150" Minimum="-10" Maximum="10" Value="{Binding PositionX}" HorizontalAlignment="Center" />
+					</StackPanel>
+					
+					<StackPanel Orientation="Vertical" Spacing="5" Margin="5" HorizontalAlignment="Center">
+						<TextBlock Text="位置 Y:" Foreground="White" HorizontalAlignment="Center" />
+						<Slider Width="150" Minimum="-10" Maximum="10" Value="{Binding PositionY}" HorizontalAlignment="Center" />
+					</StackPanel>
+					
+					<StackPanel Orientation="Vertical" Spacing="5" Margin="5" HorizontalAlignment="Center">
+						<TextBlock Text="位置 Z:" Foreground="White" HorizontalAlignment="Center" />
+						<Slider Width="150" Minimum="-10" Maximum="10" Value="{Binding PositionZ}" HorizontalAlignment="Center" />
+					</StackPanel>
+				</StackPanel>
+			</ScrollViewer>
 		</Border>
 	</Grid>
 </UserControl>
