--- a/VirtualPathCore/Views/MainWindow.axaml
+++ b/VirtualPathCore/Views/MainWindow.axaml
@@ -80,7 +80,7 @@
 		<!-- 右侧AI对话框 -->
         <Border x:Name="AIChatBorder" Background="#333333" Grid.Row="1" Grid.Column="2" CornerRadius="5" Margin="5">
             <StackPanel Margin="10" Spacing="10" HorizontalAlignment="Center">
-                <TextBlock Text="AI 对话生成模型" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
+                <TextBlock Text="AIGC-3D测试" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
         
                 <ComboBox Width="200" Height="35" Background="#444444" Foreground="White" CornerRadius="5" Padding="5"
                           ItemsSource="{Binding ModelList}" 
