--- a/VirtualPathCore/Views/StartupWindow.axaml
+++ b/VirtualPathCore/Views/StartupWindow.axaml
@@ -29,7 +29,7 @@
                Margin="0,20,0,0"/>
 		<!-- 欢迎文本 -->
 		<TextBlock x:Name="WelcomeText"
-                   Text="欢迎使用 Virtual Path 引擎"
+                   Text="欢迎使用 Virtual Path 3D引擎"
                    Grid.Row="1"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
