--- a/VirtualPathCore/Views/Components/AIChatPanel.axaml
+++ b/VirtualPathCore/Views/Components/AIChatPanel.axaml
@@ -3,14 +3,16 @@
              xmlns:vm="using:VirtualPathCore.ViewModels"
              x:Class="VirtualPathCore.Views.AIChatPanel"
              x:DataType="vm:MainWindowViewModel">
-	<StackPanel Margin="10" Spacing="10" HorizontalAlignment="Center">
-		<TextBlock Text="AIGC-3D Test" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
-		<ComboBox Width="200" Height="35" Background="#444444" Foreground="White" CornerRadius="5" Padding="5"
-                  ItemsSource="{Binding ModelList}" SelectedItem="{Binding SelectedModel}" />
-		<Border BorderBrush="#222222" BorderThickness="2" CornerRadius="5" Margin="0,10">
-			<Image Source="{Binding SelectedModelPreview}" Width="200" Height="100" Stretch="Uniform"/>
-		</Border>
-		<TextBox Width="200" Height="35" Watermark="Enter message..." Background="#444444" Foreground="White" BorderThickness="0" CornerRadius="5" Padding="5"/>
-		<Button Content="发送" Width="200" Height="40" Background="#444444" Foreground="White" CornerRadius="5" FontWeight="Bold"/>
-	</StackPanel>
+	
+			<StackPanel Margin="10" Spacing="10" HorizontalAlignment="Center">
+				<TextBlock Text="AIGC-3D" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
+				<ComboBox Width="200" Height="35" Background="#444444" Foreground="White" CornerRadius="5" Padding="5"
+						  ItemsSource="{Binding ModelList}" SelectedItem="{Binding SelectedModel}" />
+				<Border BorderBrush="#222222" BorderThickness="2" CornerRadius="5" Margin="0,10">
+					<Image Source="{Binding SelectedModelPreview}" Width="200" Height="100" Stretch="Uniform"/>
+				</Border>
+				<TextBox Width="200" Height="35" Watermark="Enter message..." Background="#444444"
+						 Foreground="White" BorderThickness="0" CornerRadius="5" Padding="5"/>
+				<Button Content="Send" Width="200" Height="40" Background="#444444" Foreground="White" CornerRadius="5" FontWeight="Bold"/>
+			</StackPanel>
 </UserControl>
