--- a/VirtualPathCore/Views/Components/ProjectFolderTree.axaml
+++ b/VirtualPathCore/Views/Components/ProjectFolderTree.axaml
@@ -3,14 +3,19 @@
              xmlns:vm="using:VirtualPathCore.ViewModels"
              x:Class="VirtualPathCore.Views.ProjectFolderTree"
              x:DataType="vm:MainWindowViewModel">
-	<StackPanel HorizontalAlignment="Stretch" Spacing="10" Margin="10">
-		<TextBlock Text="项目文件夹" Foreground="White" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
-		<TreeView ItemsSource="{Binding ProjectFolders}" SelectedItem="{Binding SelectedProjectFolder, Mode=TwoWay}">
-			<TreeView.ItemTemplate>
-				<TreeDataTemplate ItemsSource="{Binding SubFolders}">
-					<TextBlock Text="{Binding Name}" Foreground="White" FontSize="14"/>
-				</TreeDataTemplate>
-			</TreeView.ItemTemplate>
-		</TreeView>
+
+	<StackPanel HorizontalAlignment="Stretch" Spacing="12" Margin="15">
+		<TextBlock Text="Project Folders" Foreground="White" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+
+		<Border Background="#333333" CornerRadius="8" Padding="8" BorderBrush="#555555" BorderThickness="1">
+			<TreeView ItemsSource="{Binding ProjectFolders}" SelectedItem="{Binding SelectedProjectFolder, Mode=TwoWay}">
+				<TreeView.ItemTemplate>
+					<TreeDataTemplate ItemsSource="{Binding SubFolders}">
+						<TextBlock Text="{Binding Name}" Foreground="White" FontSize="15" Margin="4,2"/>
+					</TreeDataTemplate>
+				</TreeView.ItemTemplate>
+			</TreeView>
+		</Border>
 	</StackPanel>
+
 </UserControl>
