封装底部参数控制面板为独立组件 ParameterControlPanel

--- a/VirtualPathCore/Views/Components/MainView.axaml
+++ b/VirtualPathCore/Views/Components/MainView.axaml
@@ -6,7 +6,9 @@
              xmlns:opengl="using:VirtualPathCore.Graphics.OpenGL"
              mc:Ignorable="d"
              x:Class="VirtualPathCore.Views.MainView"
-             x:DataType="vm:MainViewModel">
+             x:DataType="vm:MainViewModel"
+			 xmlns:views="using:VirtualPathCore.Views"
+			 >
 
 	<Design.DataContext>
 		<vm:MainViewModel />
@@ -36,42 +38,6 @@
 		</Border>
 
 		<!-- 底部参数控制面板 -->
-		<Border Grid.Row="1" Grid.ColumnSpan="2" Margin="12" Background="#1E1E1E" CornerRadius="10" Padding="10">
-			<Expander Header="Parameter Control Panel" IsExpanded="True" Foreground="White">
-				<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
-					<WrapPanel Margin="10">
-						<StackPanel Width="180" Margin="0,0,20,0" Spacing="6">
-							<TextBlock Text="MSAA Samples" Foreground="White"/>
-							<Slider Minimum="1" Maximum="16" Value="{Binding ElementName=glRenderer1, Path=Samples}"/>
-						</StackPanel>
-
-						<StackPanel Width="180" Margin="0,0,20,0" Spacing="6">
-							<TextBlock Text="Rotation Angle" Foreground="White"/>
-							<Slider Minimum="0" Maximum="360" Value="{Binding RotationAngle}"/>
-						</StackPanel>
-
-						<StackPanel Width="180" Margin="0,0,20,0" Spacing="6">
-							<TextBlock Text="Scale" Foreground="White"/>
-							<Slider Minimum="0.1" Maximum="3.0" Value="{Binding Scale}"/>
-						</StackPanel>
-
-						<StackPanel Width="180" Margin="0,0,20,0" Spacing="6">
-							<TextBlock Text="Position X" Foreground="White"/>
-							<Slider Minimum="-10" Maximum="10" Value="{Binding PositionX}"/>
-						</StackPanel>
-
-						<StackPanel Width="180" Margin="0,0,20,0" Spacing="6">
-							<TextBlock Text="Position Y" Foreground="White"/>
-							<Slider Minimum="-10" Maximum="10" Value="{Binding PositionY}"/>
-						</StackPanel>
-
-						<StackPanel Width="180" Margin="0,0,0,0" Spacing="6">
-							<TextBlock Text="Position Z" Foreground="White"/>
-							<Slider Minimum="-10" Maximum="10" Value="{Binding PositionZ}"/>
-						</StackPanel>
-					</WrapPanel>
-				</ScrollViewer>
-			</Expander>
-		</Border>
+		<views:ParameterControlPanel Grid.Row="1" Grid.ColumnSpan="2" />
 	</Grid>
 </UserControl>
